# benchmark-suite

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  GITLAB_CI_MAPPING.md  GITLAB_CI_SUMMARY.md  IMPLEMENTATION_COMPLETION_REPORT.md  README.md  WORKFLOW_CLEANUP.md  pre_commit_hooks.yml  pre_commit_hooks_config.yml  pyproject.toml
.github/workflows/: ci.yml  dependencies.yml  format.yml  security.yml  test.yml  version.yml
.gitlab-ci/: build.yml  dependencies.yml  format.yml  release.yml  security.yml  status.yml  sync.yml  test.yml  validate.yml  version.yml
.gitlab-ci/scripts/: build-summary.sh  bump-version.sh  check-outdated-dependencies.sh  check-package-integrity.sh  commit-formatting-changes.sh  determine-version-part.sh  generate-release-notes.sh  get-package-version.sh  get-release-version.sh  gitlab-ci_scripts_check-outdated-dependencies.sh  gitlab-ci_scripts_determine-version-part.sh  gitlab-ci_scripts_resolve-version-conflicts.sh  gitlab-ci_scripts_run-linting.sh  gitlab-ci_scripts_setup-slurm.sh  gitlab-ci_scripts_sync-version-to-dev.sh  release-summary.sh  resolve-version-conflicts.sh  run-linting.sh  setup-slurm.sh  sync-version-to-dev.sh  test-package-installation.sh
completions/: benchwrap.fish
docs/: maintainer-guide.md
src/: .gitignore  requirements.txt  suite.py
src/benchwrap/: cli.py  cli_auth.py  cli_benchmarks.py  cli_constants.py  cli_sync.py  (+2 more)
test/: test_cli.py  test_core.py
tests/: test_benchmark_scripts.py  test_cli.py  test_cli_constants.py  test_cli_sync.py  test_core.py  test_flops_matrix_mul_mini_integration.py  test_slurm.py
(+96 files in other folders)
